2008-05-12  smeghead <smeghead@users.sourceforge.jp>

    * download時の書き込みをfwrite関数で行なうように修正した。

2008-05-09  smeghead <smeghead@users.sourceforge.jp>

    * freeし忘れている部分を修正した。hook処理の部分とチケット一括登録の部分。
    * 新しいチケットを登録するリンクを新しく追加した。
    * bool型を導入した。

2008-05-07  smeghead <smeghead@users.sourceforge.jp>

    * チケット詳細ページの履歴表示部分でのfreeタイミングによるバグの修正。
      (0.3.1-betaリリース以降に発生したバグ)
    * freeし忘れている部分を修正した。

2008-05-06  smeghead <smeghead@users.sourceforge.jp>

    * freeし忘れている部分を修正した。

2008-05-02  smeghead <smeghead@users.sourceforge.jp>

    * 多くの関数の引数にconstを付けた。

2008-05-01  smeghead <smeghead@users.sourceforge.jp>

    * チケット一括登録時に、入力されていない項目でデフォルト値がある場合はデ
      フォルト値で登録するように修正。

2008-04-29  smeghead <smeghead@users.sourceforge.jp>

    * 文字列用char配列バッファの長さを適切な長さに変更。数値文字列用、日付用など。
    * フォーム部品に適切なmaxlengthを指定した。

2008-04-28  smeghead <smeghead@users.sourceforge.jp>

    * free忘れの部分を修正した。list_freeなど。

2008-04-26  smeghead <smeghead@users.sourceforge.jp>

    * 0.3.1-beta リリース

2008-04-26  smeghead <smeghead@users.sourceforge.jp>

    * CSVのfreeを実装。
    * チケット一括登録作成中。説明文を追加。
    * チケット一括登録作成中。入力チェックjavascriptを追加。
    * testを追加した。
    * ヘルプを追加した。
    * リリース準備

2008-04-25  smeghead <smeghead@users.sourceforge.jp>

    * チケット詳細ページのHTMLタイトルを、「#id 件名」に変更した。
    * チケット一括登録作成中。csvフィールドのデコード処理を追加。

2008-04-24  smeghead <smeghead@users.sourceforge.jp>

    * チケット一括登録作成中。

2008-04-20  smeghead <smeghead@users.sourceforge.jp>

    * チケット一括登録作成中。

2008-04-18  smeghead <smeghead@users.sourceforge.jp>

    * チケット一括登録作成中。

2008-04-17  smeghead <smeghead@users.sourceforge.jp>

    * 正しいxhtmlでない部分を修正した。checked を checked="checked" に変更。
    * チケット登録時に、返信専用属性のチェックを行なってしまう問題を修正した。
    * チケット一括登録作成中。

2008-04-11  smeghead <smeghead@users.sourceforge.jp>

    * 出力されるHTMLを多少整形した。
    * チケット登録と統計情報のページにも、状態検索リンクとID指定フォームを追加
    した。

2008-04-09  smeghead <smeghead@users.sourceforge.jp>

    * RSS用のlinkタグを追加した。
    * httpsの場合の対応、サーバのポート番号がデフォルト以外の場合の対応をした。
